# TRAIL_AGENTS

./: LICENSE  README.md
ARTICLE_WRITER/: .gitignore  README.md
ARTICLE_WRITER/article_agent/: README.md  pyproject.toml
ARTICLE_WRITER/article_agent/src/article_agent/: crew.py  main.py
ARTICLE_WRITER/article_agent/src/article_agent/config/: agents.yaml  tasks.yaml
LinkedIn_agent/: .env  .gitignore  Writing_agent.ipynb  Writing_multiagent.ipynb  main.py  pyproject.toml  test_yaml.py
LinkedIn_agent/config/: agent.yaml  task.yaml
