[project]
name = "linedin-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai-tools>=1.6.1",
    "crewai[google-genai,tools]>=1.6.1",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "tavily-python>=0.7.13",
]
