[project]
name = "article_agent"
version = "0.1.0"
description = "Article_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
]

[project.scripts]
article_agent = "article_agent.main:run"
run_crew = "article_agent.main:run"
train = "article_agent.main:train"
replay = "article_agent.main:replay"
test = "article_agent.main:test"
run_with_trigger = "article_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
